# Spamnesty

./: .editorconfig  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  LICENSE  Pipfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements-dev.in  requirements-dev.txt  requirements.in  requirements.txt  setup.cfg  uwsgi.ini
classification/: apps.py  smoke_tests.py  urls.py  views.py
classification/templates/: classify.html
main/: admin.py  apps.py  models.py  tests.py  urls.py  utils.py  views.py
main/management/commands/: send_unsent.py
main/migrations/: 0001_initial.py  0002_auto_20160928_2355.py  0002_conversation_reporter_email.py  0003_message_send_on.py  0003_remove_message_stripped_signature.py  0004_conversation_sender_email.py  0004_message_quoted_text.py  0005_merge_20161003_1219.py  0006_replytemplate.py  0007_conversation_secret_key.py  0008_spamcategory.py  0009_auto_20161025_1307.py  0010_auto_20161025_1320.py  0011_conversation_classified.py  0012_auto_20161120_0050.py  0013_auto_20161124_2354.py  0014_message_forwarder.py  0015_conversation_created.py  0016_auto_20181121_1443.py
main/templates/: 500.html  base.html  conversation_list.html  conversation_view.html  fake.html  home.html
main/templates/emails/: forward_no_email_body.txt  forward_no_email_subject.txt  forward_received_body.txt  (+1 more)
main/tests/: __init__.py  blacklist_tests.py  smoke_tests.py  smoketests.py  unit_tests.py  unittests.py
main/views/: generic.py  learn.py  webhooks.py
mfg/: settings.py
misc/dokku/: CHECKS  DOKKU_SCALE  Procfile  uwsgi.ini
misc/systemd/: spamnesty.conf
misc/terraform/: infrastructure.tf
misc/tooling/: prod_run.sh
spamnesty/: context_processors.py  settings.py  stats_middleware.py  urls.py  wsgi.py
static/css/: style.css
(+37 files in other folders)
