[tool.poetry]
name = "spamnesty"
version = "0.1.0"
description = ""
authors = ["Stavros Korokithakis <hi@stavros.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
brotlipy = "*"
coverage = "*"
django = "==2.2.*"
django-annoying = "*"
django-bootstrap3 = "*"
django-extensions = "*"
django-nose = "*"
django-redis = "*"
faker = "*"
hypothesis = {extras = ["django"], version = "*"}
ipython = "*"
numpy = "*"
psycopg2 = "*"
raven = "*"
scipy = "*"
shortuuid = "*"
scikit-learn = "*"
spintax = "*"
uwsgi = "*"
werkzeug = "*"
whitenoise = "*"
mypy = "^0.780"
beautifulsoup4 = "^4.9.1"
djangoql = "^0.15.0"

[tool.poetry.dev-dependencies]
flake8 = "*"
flake8-docstrings = "*"
mypy = "*"
pep8 = "*"
pep8-naming = "*"
pip-tools = "*"
django-stubs = "*"
pudb = "^2019.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
